Mon Sep 13 19:56:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/rubysocket.h (__DARWIN_ALIGNBYTES): workaround of a
	  bug in system header of darwin 9.  [ruby-core:32341]

Mon Sep 13 10:12:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): reject Float('0x0.').
	  [ruby-dev:42239] Bug #3820

Mon Sep 13 09:23:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (ossl_bn_is_prime): fix comparison
	  with rb_scan_args. Before this fix, OpenSSL::BN#prime?
	  is fully broken. [ruby-dev:42225]

Sun Sep 12 21:21:50 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: [ruby-core:32096]  Thanks Colin Bartlett.

Tue Nov  2 21:33:43 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* hash.c (ruby_setenv): merged r29225 but just warning
	  instead of raising an exception. c.f. [ruby-core:32250].

Sep 11 16:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): raise if putenv and SetEnvironmentVariable
	  failed, because of the restriction of the size on Windows.
	  based on a patch from Peter Weldon at [ruby-core:32304].  fix:
	  Bug#3812, [ruby-core:32250]

Sat Sep 11 12:32:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_set_kcode, rb_get_kcode): removed
	  zombie prototype declarations.  a patch from Eric Hodel
	  at [ruby-core:32305].

Thu Sep  9 23:25:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each): skip allocator frames which have no
	  name.  [ruby-core:32231]

Thu Sep  9 10:44:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_env.rb (test_aset): OpenBSD acts like NetBSD in
	  that it ignores characters after = in ENV.
	  patched by Jeremy Evans [ruby-core:32184]

Thu Sep  9 09:02:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/rbinstall.rb (install?): gemspec filename should include
	  its version. patched by Luis Lavena [ruby-core:32165]

Mon Sep  6 11:03:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
